@@ -13,7 +13,6 @@
     "tog-showtoolbar": "Show edit toolbar",
     "tog-editondblclick": "Edit pages on double click",
     "tog-editsectiononrightclick": "Enable section editing by right clicking on section titles",
-    "tog-rememberpassword": "Remember my login on this browser (for a maximum of $1 {{PLURAL:$1|day|days}})",
     "tog-watchcreations": "Add pages I create and files I upload to my watchlist",
     "tog-watchdefault": "Add pages and files I edit to my watchlist",
     "tog-watchmoves": "Add pages and files I move to my watchlist",
