@@ -3370,7 +3370,6 @@ relname
 relnamespace
 remarticle
 remembermypassword
-rememberpassword
 removablegroups
 removal
 remove
